tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics_complex__disk_with_index.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[GraphicsComplex[{{0.5,0.5},{0,0}}, {Disk[1, 0.3], Disk[2, 0.2]}]]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x360"><rect x="0" y="0" width="360.00" height="360.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x360)">
<ellipse cx="246.67" cy="113.33" rx="100.00" ry="100.00" fill="rgb(0,0,0)"/>
<ellipse cx="80.00" cy="280.00" rx="66.67" ry="66.67" fill="rgb(0,0,0)"/>
</g>
</svg>
